# OpenSkyscraper

./: .gitignore  .gitmodules  BUGS.md  CMakeLists.txt  OpenSkyscraper  README.macosx.md  README.md  TODO.md
projects/cmake/: .gitignore  CMakeLists.txt
source/: Application.cpp  Application.h  AutoPtr.h  BitmapManager.cpp  BitmapManager.h  CMakeLists.txt  DataManager.cpp  DataManager.h  Decorations.cpp  Decorations.h  FontManager.cpp  FontManager.h  GUI.cpp  GUI.h  GUIManager.cpp  GUIManager.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Logger.cpp  Logger.h  OpenGL.h  Path.cpp  Path.h  Person.cpp  Person.h  ResourceManager.h  Route.cpp  Route.h  STRUCTURE.md  SimTowerLoader.cpp  SimTowerLoader.h  SimTowerResources.cpp  SimTowerResources.h  Sky.cpp  Sky.h  Sound.cpp  Sound.h  SoundManager.cpp  (+53 more)
source/Item/: Cinema.cpp  Cinema.h  Condo.cpp  Condo.h  Elevator.cpp  Elevator.h  ElevatorCar.cpp  ElevatorCar.h  ElevatorQueue.cpp  ElevatorQueue.h  Escalator.cpp  Escalator.h  Factory.cpp  Factory.h  FastFood.cpp  FastFood.h  Floor.cpp  Floor.h  Item.cpp  Item.h  Lobby.cpp  Lobby.h  Metro.cpp  Metro.h  Office.cpp  Office.h  PartyHall.cpp  PartyHall.h  Prototype.h  Restaurant.cpp  Restaurant.h  Stairlike.cpp  Stairlike.h  Stairs.cpp  Stairs.h  StandardElevator.h
source/Item/Elevator/: Car.cpp  Car.h  Elevator.cpp  Elevator.h  Express.h  Queue.cpp  Queue.h  Service.h  Standard.h
source/Math/: Rand.cpp  Rand.h  Rect.h  Round.cpp  Round.h  Vector2D.h  clamp.cpp  rand.h
source/PathFinder/: FloorNode.h  GameMap.cpp  GameMap.h  MapNode.cpp  MapNode.h  MapSearchNode.cpp  MapSearchNode.h  PathFinder.cpp  PathFinder.h
source/Rocket/: Renderer.cpp  Renderer.h  SystemInterface.cpp  SystemInterface.h
source/base/: autoreleasequeue.cpp  autoreleasequeue.h  base.h  event.h  external.h  functor.h  headers.h  managedmemory.cpp  managedmemory.h  object.cpp  object.h  object~.cpp  object~.h  pointer.h  responder.cpp  responder.h  singleton.h
source/base-old/: baseevent.h  object-old.cpp
source/classic/: event.h  external.h  facilityitem.h  gameevent.h  gameobject.cpp  item.h  occupiableitem.h  person.cpp  person.h  responder.cpp  responder.h  scheduledperson.h  simtower.h  timedperson.h  tower.cpp  tower.h
source/classic/events/: item.h
source/classic/gui/: controlwindow.cpp  controlwindow.h  gui.cpp  gui.h  toolboxwindow.cpp  toolboxwindow.h  window.cpp  window.h
source/classic/items/: escalator.cpp  hotelitem.cpp  housekeeping.cpp  housekeeping.h  item.cpp  item.h  itemdescriptor.h  items.h  singleroom.h  stairslike.cpp
source/classic/people/: janitor.cpp  janitor.h  person.cpp  person.h  scheduledperson.cpp  scheduledperson.h  timedperson.cpp
source/classic/scenes/: game.cpp  game.h  towerscene.h
source/classic/tower/: background.cpp  background.h  environment.cpp  environment.h  funds.cpp  funds.h  route.cpp  route.h  structure.cpp  structure.h  time.cpp  time.h  tower.cpp  tower.h
source/classic/ui/: game.cpp  game.h
source/core/: application.cpp  application.h  core.h  coreevent.h  coreobject.cpp  coreobject.h  currentable.h  engine.cpp  engine.h  event.h  eventpump.h  external.h  headers.h  invocation.h  language.h  object.h  objectextension.h  openglcanvas.cpp  openglcanvas.h  platform.cpp  platform.h  responder.cpp  responder.h  scene.cpp  scene.h  soundeffect.cpp  soundeffect.h  sprite.cpp  sprite.h  updatable.h
source/core-old/: application.cpp  application.h  core.h  coreevent.h  coreobject.h  engine.cpp  engine.h  language.cpp  openglcanvas.cpp  platform.cpp  scene.cpp  sprite.h
source/core-old/tasks/: audiotask.cpp  audiotask.h  inputtask.cpp  inputtask.h  loadertask.cpp  rendertask.h  simulationtask.h  task.h
source/core/events/: key.h  mouse.h  mousedragged.h  mousemoved.h  scrollwheel.h
source/core/tasks/: audiotask.cpp  audiotask.h  inputtask.cpp  inputtask.h  loadertask.cpp  loadertask.h  rendertask.cpp  rendertask.h  simulationtask.cpp  simulationtask.h  task.h  tasks.h
source/core~/: application.cpp  application.h  event.h  eventpump.h  invocation.h  object.h  objectextension.h  responder.cpp  responder.h
source/core~/events/: key.h  mouse.h  mousebutton.h
source/engine/: application.cpp  application.h  audio.cpp  audio.h  cruisecontrol.cpp  cruisecontrol.h  drawable.h  engine.cpp  engine.h  event.h  eventpump.cpp  eventpump.h  external.h  headers.h  input.cpp  input.h  object.h  platformspecific.cpp  renderer.cpp  renderer.h  responder.cpp  responder.h  scene.cpp  scene.h  sceneobject.h  simulatable.h  subsystem.h  types.h  video.cpp  video.h
source/engine/attributes/: drawable.h  simulatable.h  updatable.h
source/engine/audio/: audio.cpp  audio.h  soundeffect.cpp  soundeffect.h
source/engine/base/: autoreleasequeue.cpp  autoreleasequeue.h  headers.h  managedmemory.cpp  managedmemory.h  object.cpp  object.h  pointer.h  singleton.h
source/engine/events/: audio.h  basicresponder.cpp  basicresponder.h  event.h  handler.h  responder.cpp  responder.h  video.h
source/engine/math/: clamp.cpp  clamp.h  headers.h  (+4 more)
source/game/: application.cpp  application.h  external.h  facilityitem.cpp  facilityitem.h  game.h  gameevent.h  gameobject.h  headers.h  item.cpp  item.h  openskyscraper.cpp  openskyscraper.h  person.cpp  person.h  route.cpp  route.h  simtower-names.cpp  simtower.cpp  simtower.h  timedperson.cpp  timedperson.h  tower.cpp  tower.h  transportitem.cpp  transportitem.h
source/graph/: geometry.h  spatial.cpp  spatial.h  sprite.cpp  sprite.h
source/gui/: external.h  headers.h  view.cpp  view.h
source/items/: officeitem.h
source/macosx/: engine-macosx.mm  openglview.h
source/math/: clamp.h  external.h  headers.h  math.h  rand.cpp  rand.h  rect.h  rectmask.h  vector2D.h
source/misc/: bitmap-png.cpp  bitmap.cpp  bitmap.h
source/resources/: resources.h  sound.cpp  sound.h  store.h  storeitem.cpp  storeitem.h  texture.cpp  texture.h
source/tools/: constructiontool.cpp  constructiontool.h  tool.h
source/tower/: item.cpp  item.h  tower.cpp  tower.h
source/ui/: gameui.h  uibutton.cpp
source/world/: ground.h  sky.cpp
(+342 files in other folders)
